// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`golden snapshots get_balance_total 1`] = `
"root ::= tool-call
tool-call ::= get-balance-total
get-balance-total ::= "{\\"tool\\":\\"get_balance_total\\",\\"args\\":{}}"
"
`;

exports[`golden snapshots get_income_profile 1`] = `
"root ::= tool-call
tool-call ::= get-income-profile
get-income-profile ::= "{\\"tool\\":\\"get_income_profile\\",\\"args\\":{}}"
"
`;

exports[`golden snapshots get_limits 1`] = `
"root ::= tool-call
tool-call ::= get-limits
get-limits ::= "{\\"tool\\":\\"get_limits\\",\\"args\\":{}}"
"
`;

exports[`golden snapshots get_safe_to_spend 1`] = `
"root ::= tool-call
tool-call ::= get-safe-to-spend
get-safe-to-spend ::= "{\\"tool\\":\\"get_safe_to_spend\\",\\"args\\":{}}"
"
`;

exports[`golden snapshots get_spend_by_category 1`] = `
"root ::= tool-call
tool-call ::= get-spend-by-category
get-spend-by-category ::= "{\\"tool\\":\\"get_spend_by_category\\",\\"args\\":{\\"period\\":" get-spend-by-category-period "}}"
get-spend-by-category-period ::= "\\"this_month\\"" | "\\"last_month\\"" | "\\"last_7_days\\"" | "\\"last_30_days\\""
"
`;

exports[`golden snapshots get_wallets 1`] = `
"root ::= tool-call
tool-call ::= get-wallets
get-wallets ::= "{\\"tool\\":\\"get_wallets\\",\\"args\\":{}}"
"
`;

exports[`golden snapshots list_transactions 1`] = `
"root ::= tool-call
tool-call ::= list-transactions
list-transactions ::= "{\\"tool\\":\\"list_transactions\\",\\"args\\":{\\"period\\":" list-transactions-period ( ",\\"direction\\":" list-transactions-direction )? ( ",\\"limit\\":" list-transactions-limit )? "}}"
list-transactions-period ::= "\\"this_month\\"" | "\\"last_month\\"" | "\\"last_7_days\\"" | "\\"last_30_days\\""
list-transactions-direction ::= "\\"in\\"" | "\\"out\\""
list-transactions-limit ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" | "10" | "11" | "12" | "13" | "14" | "15" | "16" | "17" | "18" | "19" | "20"
"
`;

exports[`golden snapshots the whole registry 1`] = `
"root ::= tool-call
tool-call ::= get-wallets | get-balance-total | get-safe-to-spend | get-limits | get-income-profile | get-spend-by-category | list-transactions
get-wallets ::= "{\\"tool\\":\\"get_wallets\\",\\"args\\":{}}"
get-balance-total ::= "{\\"tool\\":\\"get_balance_total\\",\\"args\\":{}}"
get-safe-to-spend ::= "{\\"tool\\":\\"get_safe_to_spend\\",\\"args\\":{}}"
get-limits ::= "{\\"tool\\":\\"get_limits\\",\\"args\\":{}}"
get-income-profile ::= "{\\"tool\\":\\"get_income_profile\\",\\"args\\":{}}"
get-spend-by-category ::= "{\\"tool\\":\\"get_spend_by_category\\",\\"args\\":{\\"period\\":" get-spend-by-category-period "}}"
get-spend-by-category-period ::= "\\"this_month\\"" | "\\"last_month\\"" | "\\"last_7_days\\"" | "\\"last_30_days\\""
list-transactions ::= "{\\"tool\\":\\"list_transactions\\",\\"args\\":{\\"period\\":" list-transactions-period ( ",\\"direction\\":" list-transactions-direction )? ( ",\\"limit\\":" list-transactions-limit )? "}}"
list-transactions-period ::= "\\"this_month\\"" | "\\"last_month\\"" | "\\"last_7_days\\"" | "\\"last_30_days\\""
list-transactions-direction ::= "\\"in\\"" | "\\"out\\""
list-transactions-limit ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" | "10" | "11" | "12" | "13" | "14" | "15" | "16" | "17" | "18" | "19" | "20"
"
`;
